--- a/app/views/main_pages/terms.html.erb
+++ b/app/views/main_pages/terms.html.erb
@@ -1,120 +1,123 @@
 <% provide(:title, "Terms of Service") %>
-
-<h1>TERMS OF SERVICE</h1>
-<p>
-    These Terms of Service apply to your use of https://progressivepolk.com and all associated services 
-    including, but not limited to, e-mail received from https://progressivepolk.com and 
-    content embedded or served from other websites and/or data sources associated with 
-    https://progressivepolk.com. If you browse, donate through or otherwise use https://progressivepolk.com 
-    or subdomains, you accept these Terms of Service. If you do not agree with these Terms of Service, 
-    please do not access or use https://progressivepolk.com.
-</p>
-<h3>Privacy Policy</h3>
-<p>
-    These Terms of Service include our Privacy Policy, which describes how we use your 
-    personal information.
-</p>    
-<h3>Accuracy of Information</h3>
-<p>
-    We work hard to make sure all information provided on https://progressivepolk.com is 
-    accurate, up-to-date and complete. However, the information and materials may contain errors 
-    or inaccuracies, including both typographical and substantive errors. We reserve the right, 
-    in our sole discretion, without any obligation and without any notice requirement, to discontinue, 
-    change, improve or correct the information, materials and descriptions on https://progressivepolk.com 
-    and to suspend or deny access to https://progressivepolk.com for scheduled or unscheduled maintenance, 
-    upgrades, improvements or corrections. Any dated information is published as of its date only, 
-    and we have no responsibility to update or amend any such information.
-</p>    
-<h3>Links to Other Websites</h3>
-<p>
-    These Terms of Service apply only to https://progressivepolk.com. We provide 
-    links to external websites, but we do not have or maintain control over the content of 
-    those websites. In particular, websites to which we link may request your personal 
-    and/or financial information. We are not responsible for other sites' content, information 
-    collection practices, or use of the information they collect. Links to other websites do not 
-    constitute an endorsement of those sites or their content, owners, or posters. We encourage 
-    you to link to our Website, but you acknowledge that such linking does not constitute an 
-    endorsement by us of you, your website, or any information or content therein.
-</p>    
-<h3>Campaign Finance Laws</h3>
-<p>
-    Political contributions are governed by campaign finance laws. We make our best efforts to 
-    ensure that all contributions made through our Website are in accordance with these laws.
-</p>    
-<h3>Your use of Information Contained on Website</h3>
-<p>
-    The entire Website is copyrighted. Certain articles or materials within the Website 
-    also may be separately copyrighted by us or by others, as indicated. If you find these 
-    materials useful, you may download, copy, display, print out, or send a copy to others 
-    so long as each copy indicates the appropriate copyright notice, credits us as your source, 
-    and is used only for your personal use. You are expressly prohibited, however, from downloading, 
-    copying, displaying, printing out, or sending a copy to others for bulk or commercial uses, 
-    or for any defamatory or otherwise illegal purpose. You acknowledge that the permission granted 
-    in this section does not constitute an endorsement by us of you or your use of the information 
-    and content. Please contact us directly for special copyright permissions.
-</p>    
-<h3>Limitations on Use</h3>
-<p>
-    You may not attempt to gain unauthorized access to the Website, or computer systems or 
-    networks connected to the Website, through hacking, password or data mining, or any 
-    other means to circumvent security procedure. You may not use the Website in any manner 
-    that could damage, disable, overburden, or impair the Website or any service we provide, 
-    or interfere with any other party's use and enjoyment of the Website.
-</p>    
-<h3>User-Contributed Content</h3>
-<p>
-    Content posted on our Website by our users is not guaranteed by us as to accuracy, 
-    completeness, or usefulness, and we do not endorse any content posted by our users. 
-    It is the responsibility of our Website users to evaluate the accuracy, completeness 
-    or usefulness of any content posted on our Website by other users.
-</p>
-<p>  
-    You agree not to upload, post or otherwise make available on our Website any 
-    material protected by copyright, trademark or other proprietary right without the 
-    express permission of the owner of the copyright, trademark or other proprietary 
-    right. You agree and acknowledge that you have the burden of determining whether 
-    any material is or is not protected by copyright. By submitting material, you grant 
-    (or warrant that the owner of such material has expressly granted) to us the royalty-free, 
-    perpetual, irrevocable, non-exclusive right and license to use, reproduce, modify, adapt, 
-    publish, translate and distribute such material (in whole or in part) worldwide and/or to 
-    incorporate it in other works in any form, media or technology now known or hereafter developed 
-    for the full term of any copyright that may exist in such material. You also permit any other 
-    user of the Website to access, view, store or reproduce the material for that user's personal 
-    use. You grant us the right to edit, copy, publish and distribute any material you make available 
-    to us. You will indemnify us for, from and against all claims, losses, costs and expenses resulting 
-    from the content and information you supply.
-</p>
-<p>
-    You may not post or otherwise make available on our Website any content that 
-    is illegal, obscene, threatening, defamatory, or otherwise injurious to third 
-    parties. You may not impersonate any person or entity, or otherwise mislead as 
-    to the origin of your content. Further, you may not make use of our services to
-    forge e-mail headers, or send bulk unsolicited e-mail messages. We have the right, 
-    but not the obligation, to monitor the content posted on our Website to determine 
-    compliance with our Terms of Service and/or to satisfy any law, regulation or government 
-    request. We have the right, in our sole discretion, to edit, refuse to post or remove any 
-    material submitted to or posted on our Website including, but not limited to, material that 
-    is unlawful, threatening, libelous, defamatory, obscene, pornographic, graphic, or 
-    otherwise objectionable.
-</p>
-<h3>Disclaimer of Warranties and Limitation of Liability</h3>
-<p>
-    THE WEBSITE IS PROVIDED ON AN "AS IS" AND "AS AVAILABLE" BASIS. WE AND OUR AGENTS MAKE NO 
-    REPRESENTATIONS OR WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING WARRANTIES OF MERCHANTABILITY, 
-    FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT OR OTHERWISE, AS TO THE OPERATION OF THIS SITE, OR 
-    THE ACCURACY, TIMELINESS, OR COMPLETENESS OF INFORMATION, CONTENT, MATERIALS, OR SERVICES INCLUDED ON 
-    THIS SITE. YOU EXPRESSLY AGREE THAT YOUR USE OF THIS SITE AND ANY INFORMATION CONTAINED HEREIN IS AT 
-    YOUR SOLE RISK. WE ARE NOT LIABLE FOR ANY DAMAGES OF ANY KIND ARISING FROM THE USE OF THIS SITE, 
-    INCLUDING, BUT NOT LIMITED TO, DIRECT, INDIRECT, INCIDENTAL, PUNITIVE, AND CONSEQUENTIAL DAMAGES.
-</p>
-<p>    
-    CERTAIN STATE LAWS DO NOT ALLOW LIMITATIONS ON IMPLIED WARRANTIES OR THE EXCLUSION OR LIMITATION OF 
-    CERTAIN DAMAGES. THEREFORE, SOME OR ALL OF THE ABOVE DISCLAIMERS, EXCLUSIONS, OR LIMITATIONS MAY NOT 
-    APPLY TO YOU, AND YOU MIGHT HAVE ADDITIONAL RIGHTS.
-</p>
-<h3>Modifications</h3>
-<p>
-    We reserve the right to modify these Terms of Service at any time by posting such 
-    change here. Your continued use of these Website after such change is made constitutes 
-    acceptance of and agreement to be bound by the Terms of Service as modified.
-</p>
+<div class="row">
+    <div class="small-12 columns">
+        <h1>TERMS OF SERVICE</h1>
+        <p>
+            These Terms of Service apply to your use of https://progressivepolk.com and all associated services 
+            including, but not limited to, e-mail received from https://progressivepolk.com and 
+            content embedded or served from other websites and/or data sources associated with 
+            https://progressivepolk.com. If you browse, donate through or otherwise use https://progressivepolk.com 
+            or subdomains, you accept these Terms of Service. If you do not agree with these Terms of Service, 
+            please do not access or use https://progressivepolk.com.
+        </p>
+        <h3>Privacy Policy</h3>
+        <p>
+            These Terms of Service include our Privacy Policy, which describes how we use your 
+            personal information.
+        </p>    
+        <h3>Accuracy of Information</h3>
+        <p>
+            We work hard to make sure all information provided on https://progressivepolk.com is 
+            accurate, up-to-date and complete. However, the information and materials may contain errors 
+            or inaccuracies, including both typographical and substantive errors. We reserve the right, 
+            in our sole discretion, without any obligation and without any notice requirement, to discontinue, 
+            change, improve or correct the information, materials and descriptions on https://progressivepolk.com 
+            and to suspend or deny access to https://progressivepolk.com for scheduled or unscheduled maintenance, 
+            upgrades, improvements or corrections. Any dated information is published as of its date only, 
+            and we have no responsibility to update or amend any such information.
+        </p>    
+        <h3>Links to Other Websites</h3>
+        <p>
+            These Terms of Service apply only to https://progressivepolk.com. We provide 
+            links to external websites, but we do not have or maintain control over the content of 
+            those websites. In particular, websites to which we link may request your personal 
+            and/or financial information. We are not responsible for other sites' content, information 
+            collection practices, or use of the information they collect. Links to other websites do not 
+            constitute an endorsement of those sites or their content, owners, or posters. We encourage 
+            you to link to our Website, but you acknowledge that such linking does not constitute an 
+            endorsement by us of you, your website, or any information or content therein.
+        </p>    
+        <h3>Campaign Finance Laws</h3>
+        <p>
+            Political contributions are governed by campaign finance laws. We make our best efforts to 
+            ensure that all contributions made through our Website are in accordance with these laws.
+        </p>    
+        <h3>Your use of Information Contained on Website</h3>
+        <p>
+            The entire Website is copyrighted. Certain articles or materials within the Website 
+            also may be separately copyrighted by us or by others, as indicated. If you find these 
+            materials useful, you may download, copy, display, print out, or send a copy to others 
+            so long as each copy indicates the appropriate copyright notice, credits us as your source, 
+            and is used only for your personal use. You are expressly prohibited, however, from downloading, 
+            copying, displaying, printing out, or sending a copy to others for bulk or commercial uses, 
+            or for any defamatory or otherwise illegal purpose. You acknowledge that the permission granted 
+            in this section does not constitute an endorsement by us of you or your use of the information 
+            and content. Please contact us directly for special copyright permissions.
+        </p>    
+        <h3>Limitations on Use</h3>
+        <p>
+            You may not attempt to gain unauthorized access to the Website, or computer systems or 
+            networks connected to the Website, through hacking, password or data mining, or any 
+            other means to circumvent security procedure. You may not use the Website in any manner 
+            that could damage, disable, overburden, or impair the Website or any service we provide, 
+            or interfere with any other party's use and enjoyment of the Website.
+        </p>    
+        <h3>User-Contributed Content</h3>
+        <p>
+            Content posted on our Website by our users is not guaranteed by us as to accuracy, 
+            completeness, or usefulness, and we do not endorse any content posted by our users. 
+            It is the responsibility of our Website users to evaluate the accuracy, completeness 
+            or usefulness of any content posted on our Website by other users.
+        </p>
+        <p>  
+            You agree not to upload, post or otherwise make available on our Website any 
+            material protected by copyright, trademark or other proprietary right without the 
+            express permission of the owner of the copyright, trademark or other proprietary 
+            right. You agree and acknowledge that you have the burden of determining whether 
+            any material is or is not protected by copyright. By submitting material, you grant 
+            (or warrant that the owner of such material has expressly granted) to us the royalty-free, 
+            perpetual, irrevocable, non-exclusive right and license to use, reproduce, modify, adapt, 
+            publish, translate and distribute such material (in whole or in part) worldwide and/or to 
+            incorporate it in other works in any form, media or technology now known or hereafter developed 
+            for the full term of any copyright that may exist in such material. You also permit any other 
+            user of the Website to access, view, store or reproduce the material for that user's personal 
+            use. You grant us the right to edit, copy, publish and distribute any material you make available 
+            to us. You will indemnify us for, from and against all claims, losses, costs and expenses resulting 
+            from the content and information you supply.
+        </p>
+        <p>
+            You may not post or otherwise make available on our Website any content that 
+            is illegal, obscene, threatening, defamatory, or otherwise injurious to third 
+            parties. You may not impersonate any person or entity, or otherwise mislead as 
+            to the origin of your content. Further, you may not make use of our services to
+            forge e-mail headers, or send bulk unsolicited e-mail messages. We have the right, 
+            but not the obligation, to monitor the content posted on our Website to determine 
+            compliance with our Terms of Service and/or to satisfy any law, regulation or government 
+            request. We have the right, in our sole discretion, to edit, refuse to post or remove any 
+            material submitted to or posted on our Website including, but not limited to, material that 
+            is unlawful, threatening, libelous, defamatory, obscene, pornographic, graphic, or 
+            otherwise objectionable.
+        </p>
+        <h3>Disclaimer of Warranties and Limitation of Liability</h3>
+        <p>
+            THE WEBSITE IS PROVIDED ON AN "AS IS" AND "AS AVAILABLE" BASIS. WE AND OUR AGENTS MAKE NO 
+            REPRESENTATIONS OR WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING WARRANTIES OF MERCHANTABILITY, 
+            FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT OR OTHERWISE, AS TO THE OPERATION OF THIS SITE, OR 
+            THE ACCURACY, TIMELINESS, OR COMPLETENESS OF INFORMATION, CONTENT, MATERIALS, OR SERVICES INCLUDED ON 
+            THIS SITE. YOU EXPRESSLY AGREE THAT YOUR USE OF THIS SITE AND ANY INFORMATION CONTAINED HEREIN IS AT 
+            YOUR SOLE RISK. WE ARE NOT LIABLE FOR ANY DAMAGES OF ANY KIND ARISING FROM THE USE OF THIS SITE, 
+            INCLUDING, BUT NOT LIMITED TO, DIRECT, INDIRECT, INCIDENTAL, PUNITIVE, AND CONSEQUENTIAL DAMAGES.
+        </p>
+        <p>    
+            CERTAIN STATE LAWS DO NOT ALLOW LIMITATIONS ON IMPLIED WARRANTIES OR THE EXCLUSION OR LIMITATION OF 
+            CERTAIN DAMAGES. THEREFORE, SOME OR ALL OF THE ABOVE DISCLAIMERS, EXCLUSIONS, OR LIMITATIONS MAY NOT 
+            APPLY TO YOU, AND YOU MIGHT HAVE ADDITIONAL RIGHTS.
+        </p>
+        <h3>Modifications</h3>
+        <p>
+            We reserve the right to modify these Terms of Service at any time by posting such 
+            change here. Your continued use of these Website after such change is made constitutes 
+            acceptance of and agreement to be bound by the Terms of Service as modified.
+        </p>
+    </div>
+</div>
